--- a/index.html
+++ b/index.html
@@ -7,5 +7,63 @@
     <script defer src="app.js"></script>
     <title>PaintJS</title>
   </head>
-  <body></body>
+  <body>
+    <canvas class="jsCanvas canvas" width="600" height="600"></canvas>
+    <div class="controls">
+      <div class="controls__range">
+        <input
+          type="range"
+          id="jsRange"
+          min="0.1"
+          max="5.0"
+          value="2.5"
+          step="0.1"
+        />
+      </div>
+
+      <div class="controls__btns">
+        <button class="jsMode">Fill</button>
+        <button class="jsSave">Save</button>
+      </div>
+
+      <div class="jscolors controls__colors">
+        <div
+          class="controls__color jscolor"
+          style="background-color: #000000"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: white"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: red"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: orange"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: yellow"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: green"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: skyblue"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: blue"
+        ></div>
+        <div
+          class="controls__color jscolor"
+          style="background-color: purple"
+        ></div>
+      </div>
+    </div>
+  </body>
 </html>
